--- a/src/visao/ConsultarUsuarios.form
+++ b/src/visao/ConsultarUsuarios.form
@@ -345,6 +345,9 @@
                   </Border>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton11ActionPerformed"/>
+              </Events>
             </Component>
             <Container class="utilitarios.PainelBorderr1" name="painelBorderr15">
               <Properties>
